--- a/src/style/g2gColors.scss
+++ b/src/style/g2gColors.scss
@@ -1,11 +1,11 @@
 $theme-colors: (
-        "primary": #3E044D,
-        "secondary":#5d046e,
-        "tertiary":blue,
-        "success":#094d0c,
-        "danger": #d90005,
-        "warning":#d93f34,
-        "info":#3E044D,
-        "light":#feffe2,
-        "dark":#000000
+        "primary": #5094D9,
+        "secondary":#9980C8,
+        "tertiary":#82C2EB,
+        "success":#26c196,
+        "danger": #ff0000,
+        "warning":#ff652f,
+        "info":#1bffdf,
+        "light":#F5EAE9,
+        "dark":#1f2833
 );
