--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
   <div class="container text-center text-light">
     <div class="row justify-content-center mt-3">
       <div class="col">
-        <h1>Game to Gains</h1>
+        <h1>Game to Gain</h1>
         <hr>
       </div>
     </div>
