--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,15 @@
   <nav class="navbar bg-dark d-flex flex-column">
     <div class="container">
       <a id="title" routerLink="/home" class="navbar-brand text-light">{{titleAbbreviated}}</a>
-      <div>
-        <a routerLink="/signup" class="btn btn-outline-primary text-primary m-2">Sign Up</a>
-        <a routerLink="/login" class="btn btn-primary m-2"><strong>Login</strong></a>
+      <div *ngIf="user | async as jsonUser; else login">
+        <a routerLink="/logout" class="btn btn-outline-light text-primary m-2">Logout</a>
       </div>
+      <ng-template #login>
+        <div>
+          <a routerLink="/signup" class="btn btn-outline-primary text-primary m-2">Sign Up</a>
+          <a routerLink="/login" class="btn btn-primary m-2"><strong>Login</strong></a>
+        </div>
+      </ng-template>
     </div>
   </nav>
 
