--- a/src/app/components/create-account/create-account.component.html
+++ b/src/app/components/create-account/create-account.component.html
@@ -1,1 +1,36 @@
 <p class="text-light">create-account works!</p>
+<div class="container">
+    <h1>Hero Form</h1>
+    <form>
+
+      <div class="form-group">
+        <label for="name">First name:</label>
+        <input type="text" class="form-control" id="firstName" required>
+      </div>
+
+      <div class="form-group">
+        <label for="name">Last name:</label>
+        <input type="text" class="form-control" id="lastName" required>
+      </div>
+
+      <div class="form-group">
+        <label for="name">Email:</label>
+        <input type="text" class="form-control" id="email" required>
+      </div>
+
+      <div class="form-group">
+        <label for="name">Username:</label>
+        <input type="text" class="form-control" id="username" required>
+      </div>
+
+      <div class="form-group">
+        <label for="name">Password:</label>
+        <input type="text" class="form-control" id="password" required>
+      </div>
+
+      
+
+      <button type="submit" class="btn btn-success">Submit</button>
+
+    </form>
+</div>
