login component mostly complete, added login service

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,25 +1,27 @@
 <div class="container text-center text-light">
-    <div class="row justify-content-center mt-3">
+    <div class="row justify-content-center m-3">
         <div class="col">
             <h1>Login</h1>
             <hr>
+
         </div>
     </div>
     <div class="row justify-content-center">
-        <form id="login-form" name="form" class="text-left" action="login" method="POST">
+        <form [formGroup]="loginForm" (ngSubmit)="onSubmit(loginForm.value)" class="text-left">
             <div class="form-group">
                 <label for="username-input">Username</label>
-                <input type="text" class="form-control" name="username" placeholder="Username" size="45">
+                <input type="text" class="form-control" formControlName="username" placeholder="Username" size="45"
+                    required>
             </div>
             <div class="form-group mt-3">
                 <label for="password-input">Password</label>
-                <input type="password" class="form-control" name="password" placeholder="Password" size="45">
+                <input type="password" class="form-control" formControlName="password" placeholder="Password" size="45"
+                    required>
+            </div>
+            <div class="row justify-content-center p-4">
+                <button type="submit" class="btn btn-primary btn-block" id="login-btn">Login</button>
             </div>
         </form>
     </div>
-    <div class="row justify-content-center p-4">
-        <div class="col-5">
-            <button type="submit" class="btn btn-primary btn-block" id="login-btn" onclick="sendData()">Login</button>
-        </div>
-    </div>
+    
 </div>
