fixing Jenkins error in login component

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -12,7 +12,7 @@
             <div class="form-group">
                 <label for="username">Username</label>
                 <input type="text" class="form-control" formControlName="username" placeholder="Username" size="45">
-                <span class="text-danger" *ngIf="(username.dirty || username.touch) && username.invalid && username.errors.required">
+                <span class="text-danger" *ngIf="(username.dirty || username.touched) && username.invalid && username.errors.required">
                     Username is required.
                 </span>
             </div>
@@ -20,7 +20,7 @@
             <div class="form-group mt-3">
                 <label for="password">Password</label>
                 <input type="password" class="form-control" formControlName="password" placeholder="Password" size="45">
-                <span class="text-danger" *ngIf="(password.dirty || password.touch) && password.invalid && password.errors.required">
+                <span class="text-danger" *ngIf="(password.dirty || password.touched) && password.invalid && password.errors.required">
                     Password is required.
                 </span>
             </div>
