--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -9,19 +9,19 @@
     <div class="row mt-5">
       <div class="col-6 text-center mt-5">
         <h2>Join An Existing Room</h2>
-        <a routerLink="/about" class="btn btn-secondary text-light m-2">Join Room</a>
+        <a routerLink="/join-room" class="btn btn-secondary text-light m-2">Join Room</a>
       </div>
 
       <div class="col-6 mt-5">
         <h2>Create A New Room</h2>
-        <a routerLink="/about" class="btn btn-primary text-light m-2">Create Room</a>
+        <a routerLink="/create-room" class="btn btn-primary text-light m-2">Create Room</a>
       </div>
     </div>
 
     <div class="row mt-5 justify-content-center">
       <div class="col-6 text-center mt-5">
         <h5>Provide Team Feedback</h5>
-        <a routerLink="/about" class="btn btn-outline-light text-light m-1">Surveys</a>
+        <a routerLink="/surveys" class="btn btn-outline-light text-light m-1">Surveys</a>
       </div>
     </div>
 </div>
