--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="container text-center text-light">
     <div class="row justify-content-center mt-3">
       <div class="col">
-        <h1>Welcome, {{ user.playerUsername }}</h1>
+        <h1>Welcome, {{ (user | async)?.playerUsername }}</h1>
         <hr>
       </div>
     </div>
