playstyle choice html

--- a/src/app/components/view-rooms/view-rooms.component.html
+++ b/src/app/components/view-rooms/view-rooms.component.html
@@ -1,1 +1,19 @@
-<p class="text-light">view-rooms works!</p>
+<div class="container text-center text-light">
+    <div class="row justify-content-center mt-3">
+      <div class="col">
+        <h1>Join Room</h1>
+        <hr>
+      </div>
+    </div>
+
+    <div class="row mt-5">
+      <div class="col-12 text-center mt-5">
+        <h2 class="mb-5">What kind of player are you?</h2>
+        <a routerLink="/view-rooms" class="btn-lg btn-secondary text-light m-5">Casual</a>
+        <a routerLink="/view-rooms" class="btn-lg btn-primary text-light m-5">Serious</a>
+        <a routerLink="/view-rooms" class="btn-lg btn-success text-light m-5">Hybrid</a>
+      </div>
+
+    </div>
+
+</div>
