refactored view-rooms to separate playstyle selection

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
     <div class="row mt-5">
       <div class="col-6 text-center mt-5">
         <h2>Join An Existing Room</h2>
-        <a routerLink="/view-rooms" class="btn btn-secondary text-light m-2">Join Room</a>
+        <a routerLink="/playstyle" class="btn btn-secondary text-light m-2">Join Room</a>
       </div>
 
       <div class="col-6 mt-5">
