--- a/src/app/components/create-account/create-account.component.html
+++ b/src/app/components/create-account/create-account.component.html
@@ -1,36 +1,46 @@
-<p class="text-light">create-account works!</p>
+<br/>
 <div class="container">
-    <h1>Hero Form</h1>
-    <form>
+  <div [hidden]="submitted">
+    <h1 class="text-light">Sign Up:</h1>
+    <form (ngSubmit)="onSubmit()" #AccountForm="ngForm">
 
       <div class="form-group">
-        <label for="name">First name:</label>
+        <label class="text-light" for="firstName">First name:</label>
         <input type="text" class="form-control" id="firstName" required>
+        <div [hidden]="firstName.valid || firstName.pristine" class = "alert alert-danger">
+          Required field
+        </div>
       </div>
 
       <div class="form-group">
-        <label for="name">Last name:</label>
+        <label class="text-light" for="lastName">Last name:</label>
         <input type="text" class="form-control" id="lastName" required>
       </div>
 
       <div class="form-group">
-        <label for="name">Email:</label>
+        <label class="text-light" for="email">Email:</label>
         <input type="text" class="form-control" id="email" required>
       </div>
 
       <div class="form-group">
-        <label for="name">Username:</label>
+        <label class="text-light" for="username">Username:</label>
         <input type="text" class="form-control" id="username" required>
       </div>
 
       <div class="form-group">
-        <label for="name">Password:</label>
+        <label class="text-light" for="password">Password:</label>
         <input type="text" class="form-control" id="password" required>
       </div>
 
-      
+      <div class="form-group">
+        <label class="text-light" for="type">Account Type:</label>
+        <select class="form-control" id="type" required>
+          <option *ngFor="let t of type" [value]="t">{{t}}</option>
+        </select>
+      </div>
 
       <button type="submit" class="btn btn-success">Submit</button>
 
     </form>
-</div>
+  </div>
+</div> 
