refactored to match viewroomscontroller in backend

--- a/src/app/components/playstyle/playstyle.component.html
+++ b/src/app/components/playstyle/playstyle.component.html
@@ -10,11 +10,11 @@
       <div class="col-12 text-center mt-5">
         <h2 class="mb-5">What kind of player are you?</h2>
         <a routerLink="/view-rooms" class="btn-lg btn-secondary text-light m-5"
-            (click)="viewCasualRooms()">Casual</a>
+            (click)="viewCasualRooms(user)">Casual</a>
         <a routerLink="/view-rooms" class="btn-lg btn-primary text-light m-5"
-            (click)="viewSeriousRooms()">Serious</a>
+            (click)="viewSeriousRooms(user)">Serious</a>
         <a routerLink="/view-rooms" class="btn-lg btn-success text-light m-5"
-            (click)="viewHybridRooms()">Hybrid</a>
+            (click)="viewHybridRooms(user)">Hybrid</a>
       </div>
 
     </div>
