--- a/src/app/components/create-account/create-account.component.html
+++ b/src/app/components/create-account/create-account.component.html
@@ -8,7 +8,7 @@
 
       <div class="form-group">
         <label class="text-light" for="email">Email:</label>
-        <input type="text" class="form-control" formControlName="email" name="email" id="email" size="45" required>
+        <input type="text" class="form-control" formControlName="email" placeholder="Email" name="email" id="email" size="45" required>
         <span class="text-danger" *ngIf="(email.dirty || email.touched) && email.invalid && email.errors.required">
           Email is required.
       </span>
@@ -16,7 +16,7 @@
 
       <div class="form-group">
         <label class="text-light" for="username">Username:</label>
-        <input type="text" class="form-control" formControlName="username" name="username" id="username" size="45" required>
+        <input type="text" class="form-control" formControlName="username" placeholder="Username" name="username" id="username" size="45" required>
         <span class="text-danger" *ngIf="(username.dirty || username.touched) && username.invalid && username.errors.required">
           Username is required.
       </span>
@@ -24,7 +24,7 @@
 
       <div class="form-group">
         <label class="text-light" for="password">Password:</label>
-        <input type="password" class="form-control" formControlName="password" name="password" id="password" size="45" required>
+        <input type="password" class="form-control" formControlName="password" placeholder="Password" name="password" id="password" size="45" required>
         <span class="text-danger" *ngIf="(password.dirty || password.touched) && password.invalid && password.errors.required">
           Password is required.
       </span>
