added comment for future todo

--- a/src/app/components/view-rooms/view-rooms.component.html
+++ b/src/app/components/view-rooms/view-rooms.component.html
@@ -63,6 +63,7 @@
         </tr>
       </thead>
       <tbody>
+        <!-- TODO: fix these inputs -->
         <tr *ngFor="let room of rooms$ | async">
           <td>{{ room.roomId }}</td>
           <td>{{ room.created }}</td>
