toggle signup button on about page when logged in

--- a/src/app/components/about-g2-g/about-g2-g.component.html
+++ b/src/app/components/about-g2-g/about-g2-g.component.html
@@ -15,8 +15,11 @@
             technical skills. Join the G2G community today!
         </p>
       </div>
-      <div class="col-12 text-center">
-        <a routerLink="/signup" class="btn btn-outline-light text-light m-2">Sign Up Now</a>
-      </div>
+      <div *ngIf="user | async as userx; else signup"></div>
+      <ng-template #signup>
+        <div class="col-12 text-center">
+          <a routerLink="/signup" class="btn btn-outline-light text-light m-2">Sign Up Now</a>
+        </div>
+      </ng-template>
     </div>
 </div>
