--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -9,7 +9,7 @@
 
     <div *ngIf="expanded == true">
         <div class="row justify-content-center">
-            <div class="alert alert-danger" size="45">Invalid username or password. Please try again.</div>
+            <div class="alert alert-danger col-5">Invalid username or password. Please try again.</div>
         </div>
     </div>
 
