--- a/src/app/components/view-rooms/view-rooms.component.html
+++ b/src/app/components/view-rooms/view-rooms.component.html
@@ -71,7 +71,7 @@
               <td>{{ room.game.name }}</td>
               <td>{{ room.name }}</td>
               <td>{{ room.style }}</td>
-              <td><div routerLink="/room/id/{{room.id}}" class="btn btn-block btn-primary">Join</div></td>
+              <td><div routerLink="/room/id/{{room.id}}" class="btn btn-block btn-primary" (click)="joinRoom(room)">Join</div></td>
             </tr>
         </tbody>
       </table>
