setup for future add game feature

--- a/src/app/components/supported-games/supported-games.component.html
+++ b/src/app/components/supported-games/supported-games.component.html
@@ -1,8 +1,13 @@
 <div class="container justify-content-center">
     <div class="row justify-content-center mt-3">
-        <div class="col text-center text-light">
+        <div class="col-4"></div>
+        <div class="col-4 text-center text-light">
           <h1>Join Room</h1>
           <hr>
+        </div>
+        <div class="col-4 text-right">
+          <!-- TODO: Implement add game functionality -->
+          <!-- <div *ngIf="isModerator" class="btn btn-primary">Add Game</div> -->
         </div>
     </div>
 
