--- a/src/app/components/supported-games/supported-games.component.html
+++ b/src/app/components/supported-games/supported-games.component.html
@@ -13,7 +13,8 @@
 
     <div class="row justify-content-center">
       <div *ngFor="let game of games" class="card col-3 m-4" style="width: 18rem;">
-        <img src="{{ image }}" class="card-img-top" alt="...">
+        <!-- TODO: Pull images from API -->
+        <!-- <img src="{{ image }}" class="card-img-top" alt="..."> -->
         <div class="card-body">
           <h5 class="card-title">{{ game.name }}</h5>
           <p class="card-text">{{ game.description }}</p>
