slightly merged copy

--- a/src/app/components/create-room/create-room.component.html
+++ b/src/app/components/create-room/create-room.component.html
@@ -4,7 +4,7 @@
       <h2 class="text-light" style="text-align:center">You have sucessfully created a new room!</h2>
     </div>
 
-    <a routerLink="/room/{{createdRoom}}">
+    <a routerLink="/room/id">
       <div class="row justify-content-center p-4">
         <button class="btn btn-primary btn-block" size="45">Join Room</button>
       </div>
