commented out pagination buttons

--- a/src/app/components/view-rooms/view-rooms.component.html
+++ b/src/app/components/view-rooms/view-rooms.component.html
@@ -31,7 +31,8 @@
         <h2>Available Rooms</h2>
       </div>
 
-      <div class="col-4">
+      <!-- TODO: Implement pagination -->
+      <!-- <div class="col-4">
         <nav aria-label="...">
           <ul class="pagination justify-content-end">
             <li class="page-item">
@@ -49,7 +50,8 @@
             </li>
           </ul>
         </nav>
-      </div>
+      </div> -->
+    
     </div>
 
     <div class="row justify-content-center">
