fixed title supported game page, fixed urls on joining game page

--- a/src/app/components/supported-games/supported-games.component.html
+++ b/src/app/components/supported-games/supported-games.component.html
@@ -2,7 +2,7 @@
     <div class="row justify-content-center mt-3">
         <div class="col-4"></div>
         <div class="col-4 text-center text-light">
-          <h1>Join Room</h1>
+          <h1>Supported Games</h1>
           <hr>
         </div>
         <div class="col-4 text-right">
