--- a/src/app/components/join-room/join-room.component.html
+++ b/src/app/components/join-room/join-room.component.html
@@ -12,7 +12,8 @@
     <h4>Game: {{ room.game.name }}</h4>
     <h4>Room: {{ room.name }}</h4>
     <br/>
-    <a href="{{ link }}" class="btn btn-primary mt-2 mb-5">Join Discord Room</a>
+    <a href="{{ appLink }}" class="btn btn-primary m-4 mb-2">Join in App</a>
+    <a href="{{ webLink }}" target="_blank" class="btn btn-outline-primary text-primary m-4 mb-2">Join in Browser</a>
   </div>
 
 </div>
