--- a/src/app/components/view-rooms/view-rooms.component.html
+++ b/src/app/components/view-rooms/view-rooms.component.html
@@ -1,26 +1,6 @@
 <div *ngIf="user; else login">
-  <div class="container text-center text-light" *ngIf="!style">
-    <div class="row justify-content-center mt-3">
-      <div class="col">
-        <h1>Join Room</h1>
-        <hr>
-      </div>
-    </div>
 
-    <div class="row mt-5">
-      <div class="col-12 text-center mt-5">
-        <h2 class="mb-5">What kind of player are you?</h2>
-        <a class="btn-lg btn-secondary text-light m-5"
-            (click)="viewCasualRooms()">Casual</a>
-        <a class="btn-lg btn-primary text-light m-5"
-            (click)="viewSeriousRooms()">Serious</a>
-        <a class="btn-lg btn-success text-light m-5"
-            (click)="viewHybridRooms()">Hybrid</a>
-      </div>
-    </div>
-  </div>
-
-  <div class="container text-light" *ngIf="style">
+  <div class="container text-light">
     <div class="row justify-content-center mt-3">
 
       <div class="col-4"></div>
