--- a/src/app/components/playstyle/playstyle.component.html
+++ b/src/app/components/playstyle/playstyle.component.html
@@ -11,9 +11,9 @@
         <div class="row mt-5">
         <div class="col-12 text-center mt-5">
             <h2 class="mb-5">What kind of player are you?</h2>
-            <a routerLink="/view-rooms/casual" class="btn-lg btn-secondary text-light m-5">Casual</a>
-            <a routerLink="/view-rooms/serious" class="btn-lg btn-primary text-light m-5">Serious</a>
-            <a routerLink="/view-rooms/hybrid" class="btn-lg btn-success text-light m-5">Hybrid</a>
+            <a routerLink="/rooms/casual" class="btn-lg btn-secondary text-light m-5">Casual</a>
+            <a routerLink="/rooms/serious" class="btn-lg btn-primary text-light m-5">Serious</a>
+            <a routerLink="/rooms/hybrid" class="btn-lg btn-success text-light m-5">Hybrid</a>
         </div>
         </div>
     </div>
