--- a/src/app/components/supported-games/supported-games.component.html
+++ b/src/app/components/supported-games/supported-games.component.html
@@ -20,7 +20,7 @@
           <h5 class="card-title">{{ game.name }}</h5>
           <p class="card-text">{{ game.description }}</p>
           <a href="{{ game.link }}" class="card-link">Website Link</a>
-          <a routerLink="/dashboard" class="card-link">Join Rooms</a>
+          <a routerLink="/rooms/game/{{ game.gameId }}" class="card-link">Join Rooms</a>
         </div>
       </div>
     </div>
