--- a/src/app/components/view-rooms/view-rooms.component.html
+++ b/src/app/components/view-rooms/view-rooms.component.html
@@ -3,10 +3,18 @@
   <div class="container text-light">
     <div class="row justify-content-center mt-3">
 
-      <div class="col-4"></div>
+      <div class="col-4">
+        <div class="btn-group" role="group" aria-label="Button group for playstyle">
+          <button type="button" class="btn btn-outline-secondary" (click)="filterCasual()">Casual</button>
+          <button type="button" class="btn btn-outline-secondary" (click)="filterSerious()">Serious</button>
+          <button type="button" class="btn btn-outline-secondary" (click)="filterHybrid()">Hybrid</button>
+          <button *ngIf="gameId" type="button" class="btn btn-outline-secondary" (click)="filterAll()">All</button>
+        </div>
+      </div>
 
-      <div class="col-4 text-center mb-3">
+      <div class="col-4 text-center">
         <h2>Available Rooms</h2>
+        <hr>
       </div>
 
       <div class="col-4">
@@ -38,26 +46,33 @@
       <table class="table table-hover">
         <thead>
           <tr>
+            <th scope="col">Playstyle</th>
             <th scope="col"># of Players</th>
             <th scope="col">Max Players</th>
             <th scope="col">Game</th>
             <th scope="col">Room Name</th>
-            <th scope="col">Playstyle</th>
             <th scope="col"></th>
           </tr>
         </thead>
         <tbody>
             <tr *ngFor="let room of rooms$ | async">
+              <td>{{ room.style }}</td>
               <td>{{ room.currentPlayers }}</td>
               <td>{{ room.maxPlayers }}</td>
               <td>{{ room.game.name }}</td>
               <td>{{ room.name }}</td>
-              <td>{{ room.style }}</td>
               <td><div routerLink="/room/id/{{room.id}}" class="btn btn-block btn-primary" (click)="joinRoom(room)">Join</div></td>
             </tr>
         </tbody>
       </table>
     </div>
+
+    <div *ngIf="noGames" class="row justify-content-center">
+      <div class="jumbotron text-center bg-dark text-light">
+        <h3>No open rooms available.</h3>
+      </div>
+    </div>
+
   </div>
 </div>
 
